<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cucumber Sync</string>
    <string name="menu_settings">Settings</string>

    <string-array name="http_protocols">
        <item>http://</item>
        <item>https://</item>
    </string-array>

    <string name="http_warning">"If you don't use encryption (HTTPS), other people may easily intercept your login details, contacts and events."</string>
    <string name="credentials_label">Account Credentials</string>
    <string name="user_name">User name:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm:</string>
    <string name="advanced_label">Advanced</string>
    <string name="account_server_label">Account Server:</string>
    <string name="token_server_label">Token Server:</string>
    <string name="next">Next</string>
    <string name="help">Help</string>
    <string name="invalid_base_url">Invalid base URL: </string>
    <string name="title_select_collections">Cucumber Sync: Select collections</string>
    <string name="exception_io">I/O error: %s</string>
    <string name="exception_uri_syntax">Invalid URI: %s</string>
    <string name="exception_incapable_resource">Missing capabilities: %s</string>
    <string name="neither_caldav_nor_carddav">Neither CalDAV nor CardDAV available</string>
    <string name="error_principal_path">"Couldn't determine principal path (RFC 5397)"</string>
    <string name="error_home_set_address_books">"Couldn't determine address book home set"</string>
    <string name="error_home_set_calendars">"Couldn't determine calendar home set"</string>
    <string name="add_account">Add account</string>
    <string name="querying_server">Querying server. Please wait…</string>
    <string name="exception_http">HTTP error: %s</string>
    <string name="what_to_sync">Which collections shall be synchronized?</string>
    <string name="address_books">Address books</string>
    <string name="calendars">Calendars</string>
    <string name="select_address_book">Select up to one address book (tap again to unselect):</string>
    <string name="select_calendars">Select your calendars:</string>
    <string name="auth_preemptive">Preemptive authentication (recommended, but incompatible with Digest auth)</string>
    
    
    <string name="show_sync_settings">Manage sync accounts</string>
    <string name="show_website">Cucumber Sync Web site</string>
    <string name="html_main_workaround"><![CDATA[
		<p>Thank you for buying Cucumber Sync via Google Play and thus supporting the project. Unfortunately, there are two issues with Google Play:</p>
		
		<h2>1. Accounts may be gone after a reboot</h2>
		<p>You may encounter the problem that all your <strong>Cucumber Sync accounts (including contacts and events) are gone
        after rebooting your device</strong>. The reason is a <a href="https://code.google.com/p/android/issues/detail?id=34880">bug in Android</a>
        that causes accounts of paid apps to be removed on start-up because the (encrypted) APK files are
        loaded <i>after</i> checking for orphaned accounts.</p>
        <p>Affected users:<br/>
        * all Android 4.1 users who have got Cucumber Sync from Play Store;<br/>
        * Android 4.2 users who have got Cucumber Sync from Play Store only with certain devices (for instance, most Samsung devices)</p>
        
        <h2>2. Accounts may be gone after upgrading Cucumber Sync</h2>
        <p>You may encounter the problem that all your <strong>Cucumber Sync accounts (including contacts and events) when Play Store
        updates Cucumber Sync</strong>. The reason is <a href="https://code.google.com/p/android/issues/detail?id=66905">another bug in Android</a>
        that causes accounts of paid apps to be removed when upgrading for a similar reason.</p>
        <p>Affected users: some Android 4.4.2 users who have got Cucumber Sync from Play Store (known for Nexus devices and Moto G)</p>
        
        <p><strong>If you\'re affected by one of these bugs, unfortunately there is currently no fix, however a workaround will be implemented before releasing a supported version.</strong></p>
    ]]></string>
    <string name="html_main_info"><![CDATA[
       <h1>Welcome to Cucumber Sync/%s!</h1>
       
       <p>Cucumber Sync is an Android 4+ sync provider that syncs Personal Information Management data Securely (PIMS, like the drink), i.e. contacts and calendars.</p>
       <p>Cucumber Sync uses a self-hosted Mozilla Sync (aka Firefox Sync) server as the back end, just add a Cucumber Sync account using your Firefox Sync credentials and contacts and calendars saved using Cucumber Sync will be synchronised with the server. Add a Cucumber Sync account to additional devices to synchronise contacts and calendars across multiple devices. Cucumber Sync uses end-to-end encryption ensuring your data remains confidentiality even from the server.</p>
       
       <p>For more information, please see the <a href="https://github.com/nickel-chrome/CucumberSync">Cucumber Sync site</a> hosted on GitHub.
                     	   
	   <h1>License</h1>
	   <p>
       This program is free software: you can redistribute it and/or modify
       it under the terms of the GNU General Public License as published by
       the Free Software Foundation, either version 3 of the License, or
       (at your option) any later version.
       </p>
       <p>
       This program is distributed in the hope that it will be useful,
       but WITHOUT ANY WARRANTY; without even the implied warranty of
       MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
       GNU General Public License for more details.
       </p>
       <p>
       You should have received a copy of the GNU General Public License
       along with this program.  If not, see <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.
	   </p>

	   <h2>Third-party libraries and dependencies</h2>
	   <p>
	   Cucumber Sync is derived from:<br/>
	   * <a href="http://davdroid.bitfire.at?pk_campaign=davdroid-app&amp;pk_kwd=main-activity">DAVdroid</a> by Richard Hirner (bitfire web engineering) - <a href="http://www.gnu.org/licenses/">GNU Public License v3.0</a><br/>
	   * <a href="https://github.com/mozilla-services/android-sync">Mozilla Services Android Sync</a> – <a href="http://www.mozilla.org/MPL">Mozilla Public License 2.0</a>
	   </p>

	   <p>
	    Other third party libraries include:<br/>
	    * <a href="https://github.com/nickel-chrome/weaveclient-java">weaveclient-java</a> - <a href="http://www.gnu.org/licenses/">GNU Public License v3.0</a><br/>
	    * <a href="http://hc.apache.org">Apache HttpClient</a> – <a href="http://www.apache.org/licenses/">Apache License, Version 2.0</a><br/>
	    * <a href="http://rtyley.github.io/spongycastle/">Spongy Castle</a> – <a href="http://www.bouncycastle.org/licence.html">Bouncy Castle License</a><br/>
	    * <a href="https://github.com/SQLDroid/SQLDroid">SQLDroid</a> – <a href="http://www.opensource.org/licenses/mit-license">MIT License</a><br/>
	    * <a href="https://github.com/FasterXML/jackson">FasterXML</a> – <a href="http://www.apache.org/licenses/">Apache License, Version 2.0</a><br/>
	   	* <a href="https://code.google.com/p/ez-vcard/">ez-vcard</a> – <a href="http://opensource.org/licenses/BSD-3-Clause">New BSD License</a><br/>
	   	* <a href="http://sourceforge.net/projects/biweekly/">biweekly</a> – <a href="http://opensource.org/licenses/bsd-license">Free BSD License</a><br/>
	   	* <a href="http://projectlombok.org/">Project Lombok</a> – <a href="http://opensource.org/licenses/mit-license">MIT License</a>
	   </p>
    ]]></string>
    
    <string name="account_details">Account details</string>
    <string name="account_name">Account name:</string>
    <string name="account_name_hint">My CalDAV/CardDAV Account</string>
    <string name="email_address">Email:</string>
    <string name="organizer_hint">"ORGANIZER of your events; required if you use attendee info"</string>
    <string name="account_name_info">"Use your email address as account name because Android will use the account name as ORGANIZER field for events you create. You can't have two accounts with the same name.</string>
    <string name="read_only">read-only</string>

    
    
    <string name="exception_csyncdroid">Cucumber Sync error: %s</string>
    <string name="synckey">Sync Key:</string>
    <string name="received_ca_authcode">Enter auth code here to approve</string>
    <string name="received_ca_reject">Reject</string>
    <string name="received_ca_approve">Approve</string>
    <string name="csyncdroid_account_legacyv5">Cucumber Sync Weave</string>
    <string name="csyncdroid_account_exfiopeer">Cucumber Sync eXfio</string>
    <string name="csyncdroid_account_fxaccount">Cucumber Sync (FxA)</string>
    <string name="csyncdroid_account_csync">Cucumber Sync</string>
    <string name="csyncdroid_account_name_hint">My Cucumber Sync Account</string>
    <string name="csyncdroid_help">Cucumber Sync Help</string>
    <string name="credentials_username_hint">Email address or username</string>
    <string name="credentials_password_hint">At least 8 characters</string>
    <string name="credentials_confirm_password_hint">Enter password again</string>
    <string name="credentials_email_hint">Email address (optional)</string>
    <string name="credentials_button_signin">Sign In</string>
    <string name="credentials_button_signup">Create Account</string>
    <string name="credentials_button_gotosignin">Sign In</string>
    <string name="credentials_button_gotosignup">Create account</string>
    <string name="credentials_label_signin">Sign In</string>
    <string name="credentials_label_signup">Create Account</string>
    <string name="credentials_label_gotosignin">Already have an account?</string>
    <string name="credentials_label_gotosignup">Don\'t have an account?</string>
    <string name="credentials_label_legalese"><![CDATA[
        By proceeding, you agree to the <a href="https://accounts.cucumbersync.com/legal/terms">Terms of Service</a> and <a href="https://accounts.cucumbersync.com/legal/privacy">Privacy Notice</a>; of Cucumber Sync.
    ]]></string>

</resources>
