<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Gerry Healy <nickel_chrome@exfio.org> and contributors
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ This program is derived from DAVdroid, Copyright (C) 2014 Richard Hirner, bitfire web engineering
  ~ DavDroid is distributed under the terms of the GNU Public License v3.0, https://github.com/bitfireAT/davdroid
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="2"
        android:padding="10dp"
        android:useDefaultMargins="true" >

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/credentials_label_signup"
            android:layout_marginBottom="20dp"
            android:layout_gravity="left"
            android:layout_columnSpan="2" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/user_name"
            android:layout_gravity="left" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:inputType="textNoSuggestions" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password"
            android:layout_gravity="left" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:inputType="textPassword"
            android:hint="@string/credentials_password_hint" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/confirm_password"
            android:layout_gravity="left" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:inputType="textPassword"
            android:hint="@string/credentials_confirm_password_hint" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email_address"
            android:layout_gravity="left" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:inputType="textNoSuggestions|textEmailAddress"
            android:hint="@string/credentials_email_hint" />

        <Space android:layout_gravity="left|top"
            android:layout_columnSpan="2"
            android:layout_height="20dp"
            android:layout_width="wrap_content" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_columnSpan="2"
            android:text="Legalese"
            android:id="@+id/labelLegaleseSignUp"
            android:layout_gravity="center_horizontal" />

        <Space android:layout_gravity="left|top"
            android:layout_columnSpan="2"
            android:layout_height="20dp"
            android:layout_width="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credentials_button_signup"
            android:id="@+id/buttonSignUp"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/button_accent" />

        <Space
            android:layout_gravity="left|top"
            android:layout_height="20dp"
            android:layout_width="wrap_content"
            android:layout_columnSpan="2" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_columnSpan="2" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_columnSpan="2">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/credentials_label_gotosignin"
                android:layout_gravity="bottom|left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credentials_button_gotosignin"
                android:id="@+id/buttonGotoSignIn"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_primary_light"
                android:layout_marginLeft="10dp" />

        </LinearLayout>


    </GridLayout>

</ScrollView>