<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="2"
        android:padding="10dp"
        android:useDefaultMargins="true" >

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/credentials_label"
            android:layout_marginBottom="20dp"
            android:layout_gravity="left"
            android:layout_columnSpan="2" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/user_name"
            android:layout_gravity="left" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:inputType="textNoSuggestions|textEmailAddress" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password"
            android:layout_gravity="left" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:inputType="textPassword" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_columnSpan="2" />

        <TextView
            android:layout_columnSpan="2"
            android:layout_gravity="left"
            android:layout_marginBottom="20dp"
            android:text="@string/advanced_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_columnSpan="2"
            android:layout_gravity="left"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/account_server_label" />

        <Spinner
            android:id="@+id/fxaccount_account_server_protocol"
            android:layout_width="wrap_content"
            android:layout_gravity="left"
            android:entries="@array/http_protocols" />

        <EditText
            android:id="@+id/fxaccount_account_server_url"
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:hint="myserver"
            android:inputType="textUri" />

        <TextView
            android:layout_columnSpan="2"
            android:layout_gravity="left"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/token_server_label" />

        <Spinner
            android:id="@+id/fxaccount_token_server_protocol"
            android:layout_width="wrap_content"
            android:layout_gravity="left"
            android:entries="@array/http_protocols" />

        <EditText
            android:id="@+id/fxaccount_token_server_url"
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:hint="myserver"
            android:inputType="textUri" />

        <Space android:layout_gravity="left|top" />

    </GridLayout>

</ScrollView>