<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="2"
        android:padding="10dp"
        android:useDefaultMargins="true" >

        <TextView
            android:layout_columnSpan="2"
            android:layout_gravity="left"
            android:text="@string/account_server_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/exfiopeer_account_server_protocol"
            android:layout_width="wrap_content"
            android:layout_gravity="left"
            android:entries="@array/http_protocols" />

        <EditText
            android:id="@+id/exfiopeer_account_server_url"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:hint="myserver"
            android:inputType="textUri" />

        <TextView
            android:id="@+id/http_warning"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="fill_parent"
            android:layout_columnSpan="2"
            android:layout_gravity="left"
            android:drawableLeft="@drawable/alerts_and_states_warning"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/http_warning" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/userName"
            android:layout_gravity="fill_horizontal"
            android:inputType="textNoSuggestions|textEmailAddress"
            android:text="" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_gravity="fill_horizontal"
            android:inputType="textPassword"
            android:text="" />
        
        <Space android:layout_gravity="left|top" />
        
    </GridLayout>

</ScrollView>